# The-Grid-Pulse-Real-Time-Energy-Demand-Forecasting-System

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.dvc/: config  config.local
.dvc/tmp/: lock
dags/: daily_ingest_dag.py
data/raw/: demand_history.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
src/: dataset.py
