[project]
name = "src"
version = "0.0.1"
description = "The Grid Pulse: Real-Time Energy Demand Forecasting System"
authors = [
  { name = "Yusuf Tejakusumah" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
    "loguru",           # Better logging
    "typer",            # CLI app builder
    "python-dotenv",    # Environment variable management
    "tqdm",             # Progress bars
    "pandas",		    # Data manipulation
    "numpy",
    "scikit-learn",     # Basic ML
    "torch",            # Deep Learning (Production runtime)
    "fastapi",          # Model Serving API
    "uvicorn",          # ASGI Server for FastAPI
    "pydantic",         # Data validation for API
    "prometheus-client" # Monitoring metrics
]

[project.optional-dependencies]
dev = [
    "pytest",               # Testing
    "ruff",                 # Linting/Formatting
    "jupyterlab",           # Notebooks
    "matplotlib",           # Plotting
    "seaborn",
    "great-expectations",   # Data Quality/Validation
    "mlflow",               # Experiment Tracking
    "dvc",                  # Data Version Control
    "dvc-s3",               # DVC plugin for S3/MinIO/DagsHub support
    "optuna",               # Hyperparameter Tuning
    "dagshub",              # Connectivity for remote storage
    "apache-airflow",       # Workflow Orchestration
    "mkdocs",               # Documentation
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Tool Configurations ---

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.hatch.build.targets.wheel]
packages = ["src"]